--- a/app/assets/stylesheets/smoothproducts.css
+++ b/app/assets/stylesheets/smoothproducts.css
@@ -96,6 +96,7 @@ html, body {
 	top: -50%;
 	cursor: -webkit-zoom-in;
 	cursor: -moz-zoom-in;
+	cursor: zoom-in;
 	display: none;
 }
 /* Lightbox */
@@ -110,6 +111,7 @@ html, body {
 	background: rgba(0, 0, 0, .9);
 	z-index: 500;
 	display: none;
+	cursor: pointer;
 }
 .sp-lightbox img {
 	position: absolute;
